# Animal-Checker

./: .env  README.md  animal.py  image.py  install.py  main.py  pyproject.toml  request.py  run_app.py  streamlit_app.py  vision_transformer.py
app/: main.py
app/routers/: animal.py  sonar.py
